RESOLVED FIXED25377
RenderSVGImage is not dumping bounds
https://bugs.webkit.org/show_bug.cgi?id=25377
Summary RenderSVGImage is not dumping bounds
Eric Seidel (no email)
Reported 2009-04-24 14:28:04 PDT
Fix it. See patch.
Attachments
Fix RenderSVGImage to dump with full bounds (99.84 KB, patch)
2009-04-24 14:28 PDT, Eric Seidel (no email)
simon.fraser: review+
Eric Seidel (no email)
Comment 1 2009-04-24 14:28:50 PDT
Created attachment 29765 [details] Fix RenderSVGImage to dump with full bounds 44 files changed, 280 insertions(+), 194 deletions(-)
Eric Seidel (no email)
Comment 2 2009-04-24 14:35:02 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/platform/mac/svg/W3C-SVG-1.1/animate-elem-30-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/animate-elem-39-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/animate-elem-40-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/color-prof-01-f-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/coords-viewattr-02-b-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/filters-blend-01-b-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/filters-conv-01-f-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/filters-diffuse-01-f-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/filters-light-01-f-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/filters-specular-01-f-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/masking-path-04-b-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/render-groups-01-b-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/render-groups-03-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-image-01-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-image-03-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-image-04-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-image-06-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-image-07-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-image-08-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-image-09-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-image-10-t-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-symbol-01-b-expected.txt M LayoutTests/platform/mac/svg/W3C-SVG-1.1/struct-use-01-t-expected.txt M LayoutTests/platform/mac/svg/carto.net/scrollbar-expected.txt M LayoutTests/platform/mac/svg/carto.net/selectionlist-expected.txt M LayoutTests/platform/mac/svg/custom/focus-ring-expected.txt M LayoutTests/platform/mac/svg/custom/group-opacity-expected.txt M LayoutTests/platform/mac/svg/custom/image-clipped-hit-expected.txt M LayoutTests/platform/mac/svg/custom/image-parent-translation-expected.txt M LayoutTests/platform/mac/svg/custom/image-small-width-height-expected.txt M LayoutTests/platform/mac/svg/custom/image-with-aspect-ratio-stretch-expected.txt M LayoutTests/platform/mac/svg/custom/image-with-transform-clip-filter-expected.txt M LayoutTests/platform/mac/svg/custom/pointer-events-image-expected.txt M LayoutTests/platform/mac/svg/custom/repaint-on-image-bounds-change-expected.txt M LayoutTests/platform/mac/svg/custom/scrolling-embedded-svg-file-image-repaint-problem-expected.txt M LayoutTests/platform/mac/svg/custom/text-image-opacity-expected.txt M LayoutTests/platform/mac/svg/custom/use-on-g-containing-foreignObject-and-image-expected.txt M WebCore/ChangeLog M WebCore/rendering/RenderObject.h M WebCore/rendering/RenderSVGImage.h M WebCore/rendering/RenderTreeAsText.cpp M WebCore/rendering/SVGRenderTreeAsText.cpp M WebCore/rendering/SVGRenderTreeAsText.h Committed r42840
Note You need to log in before you can comment on or make changes to this bug.