        Reviewed by Simon Fraser.

Fix RenderSVGImage to dump with full bounds and style information.
        https://bugs.webkit.org/show_bug.cgi?id=25377

        No functional changes, we're just now including more info in render tree dumps.

        * rendering/RenderObject.h:
        (WebCore::RenderObject::isSVGImage):
        * rendering/RenderSVGImage.h:
        (WebCore::RenderSVGImage::isSVGImage):
        * rendering/RenderTreeAsText.cpp:
        (WebCore::write):
        * rendering/SVGRenderTreeAsText.cpp:
        (WebCore::operator<<):
        (WebCore::write):
        * rendering/SVGRenderTreeAsText.h:

Canonical link: https://commits.webkit.org/34890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42840 268f45cc-cd09-0410-ab3c-d52691b4dbfc