WebCore/rendering/SVGRenderTreeAsText.h
@@ -45,13 +45,15 @@ namespace WebCore {
     class RenderSVGInlineText;
     class RenderSVGRoot;
     class RenderSVGText; 
+    class RenderSVGImage;
 
 // functions used by the main RenderTreeAsText code
 void write(TextStream&, const RenderPath&, int indent = 0);
 void write(TextStream&, const RenderSVGContainer&, int indent = 0);
-void write(TextStream&, const RenderSVGInlineText&, int ident = 0);
+void write(TextStream&, const RenderSVGInlineText&, int indent = 0);
 void write(TextStream&, const RenderSVGRoot&, int indent = 0);
-void write(TextStream&, const RenderSVGText&, int ident = 0);
+void write(TextStream&, const RenderSVGText&, int indent = 0);
+void write(TextStream&, const RenderSVGImage&, int indent = 0);
 
 void writeRenderResources(TextStream&, Node* parent);
 
